# luke-swsxhackathon

./: .gitignore  pyproject.toml
backend/: ingest.py  server.js
frontend/swsxhackathon/: index.html  package.json
frontend/swsxhackathon/src/: App.jsx  index.css
frontend/swsxhackathon/src/api/: api.js
frontend/swsxhackathon/src/components/: ActionableInsights.jsx  ChatWidget.jsx  ChatbotWidget.jsx  ComplianceCheckTable.jsx  ComplianceDashboard.jsx  ComplianceTrends.jsx  DashboardOverview.jsx  DraftSection.jsx  Footer.jsx  GrammarIssues.jsx  Header.jsx  IssueCategories.jsx  IssueResolutionCanvas.css  IssueResolutionCanvas.jsx  IssuesSection.jsx  MarkdownDisplay.css  MarkdownDisplay.jsx  PersonalizedLandingPage.jsx  Rectifications.jsx  SecurityValidation.jsx  SpellingIssues.jsx  StatementIssues.jsx  SummarySection.jsx  TextAreaWithAnalysis.jsx
frontend/swsxhackathon/src/pages/: AIAtHome.jsx  AIForDevs.jsx  Compliance.jsx  ComplianceCheckRecord.jsx  Directory.jsx  Embed.jsx  Home.jsx  styles.css  tooltip.css  transitions.css
patches/: html.py
