[tool.poetry]
name = "sxsw-hackathon"
version = "0.1.0"
description = ""
authors = ["Luke <58807644+munday-tech@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.2.0"
langchain = "^0.3.3"
langchain-groq = "^0.2.0"
langgraph = "^0.2.38"
python-dotenv = "^1.0.1"
fitz = "^0.0.1.dev2"
docx2txt = "^0.8"
langchain-community = "^0.3.2"
pinecone = "^5.3.1"
openai = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
